slightly better job crawling
